# NoxImperii

./: .gitignore  AUTHORS  AUTHORS-LN photos.txt  AUTHORS-landscapes.txt  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  custombuild.sh  naev-confupdate.sh  naev.6  naev.appdata.xml  naev.desktop  noximperii.appdata.xml  noximperii.desktop
dat/: .gitignore  commodity.xml  crew.xml  crew_names.lua  damagetype.xml  event.xml  faction.xml  fleet.xml  fleet_names.lua  intro  landing.lua  map.xml  mission.xml  slots.xml  start.xml  status.lua  tech.xml
dat/ai/: barbarians.lua  betelgeuse.lua  betelgeuse_trader.lua  civilian.lua  empire.lua  empire_refuel.lua  empire_traders.lua  flf.lua  holyflame.lua  independent_trader.lua  independent_worlds.lua  ixum_kingdom.lua  mercenary.lua  natives.lua  pirate.lua  roidhunate.lua  roidhunate_trader.lua  trader.lua
dat/assets/: aenas.xml  alfzar.xml  altai.xml  ardarshir.xml  ardashir.xml  cestiphia.xml  daedelus.xml  dandalo.xml  dchaira.xml  dennitza.xml  dido.xml  diomedes.xml  dires.xml  fez.xml  freehold.xml  gonder.xml  gulabi.xml  harkan.xml  hermes.xml  iapetus.xml  icht.xml  ifri.xml  imhotep.xml  irumclaw.xml  jupiter.xml  kashi.xml  kaznor.xml  llynathawr.xml  luna.xml  margiorre.xml  mars.xml  mercury.xml  merseia.xml  mesyatz.xml  mirkheim.xml  naeris.xml  namaste.xml  neihevin.xml  new_rila.xml  nyanza.xml  (+26 more)
dat/bkg/: default.lua  eagle.lua  hyades.lua  orion.lua  pleiades.lua
dat/events/: bonus_fuel.lua  generate_systems.lua  initialise_static_systems.lua  pirate_fame.lua  start.lua  world_events.lua  world_events_clearEffects.lua
dat/gui/: slim.lua
dat/missions/: cargo_custom.lua  cargo_custom_types.lua  common.lua  rehab_common.lua
dat/scripts/: cargo_common.lua  constants.lua  dump.lua  fleet_form.lua  fleethelper.lua  general_helper.lua  luadata.lua  nextjump.lua  special_ships.lua
dat/ships/: admonisher.xml  ardarshir_comet.xml  ardarshir_continent.xml  ardarshir_meteor.xml  ardarshir_nova.xml  ardarshir_planet.xml  argosy.xml  (+63 more)
docs/: Makefile.am  luadoc.sh
extras/: resource.rc
lib/: Makefile.am
m4/: openal.m4  opengl.m4  shave.m4
src/: .gitignore  Doxyfile  Makefile.am  ai.c  ai.h  ai_extra.h  array.c  array.h  background.c  background.h  base64.c  base64.h  board.c  board.h  camera.c  camera.h  claim.c  claim.h  collision.c  collision.h  colour.c  colour.h  comm.c  comm.h  cond.c  cond.h  conf.c  conf.h  console.c  console.h  crew.c  crew.h  damagetype.c  damagetype.h  debris.c  debris.h  dev.c  dev.h  dev_outfit.c  dev_outfit.h  (+246 more)
utils/: Makefile.am  mission.py  os
(+725 files in other folders)
